--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
+html
+Copy code
 <!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio di Alessandro</title>
     <style>
         /* Stile generale */
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Georgia', serif;
             margin: 0;
             padding: 0;
-            background-color: #f3f3f3;
+            background-color: #ffffff;
             color: #333;
         }
+
+        /* Intestazione con nome e contatti */
         header {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            padding: 40px 0;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 40px 20px;
         }
+
         header h1 {
+            font-size: 3em;
             margin: 0;
-            font-size: 2.5em;
+            color: #2c3e50;
         }
+
         header p {
             font-size: 1.2em;
+            margin: 5px 0;
+            color: #666;
+        }
+
+        /* Linea divisoria */
+        .divider {
+            border-top: 1px solid #ddd;
+            margin: 20px 0;
         }
 
         /* Contenitore dei progetti */
         .container {
-            width: 85%;
+            width: 80%;
             max-width: 1200px;
             margin: 40px auto;
             display: flex;
@@ -38,38 +50,42 @@
             gap: 20px;
         }
 
+        /* Stile per i progetti in due colonne */
         .project {
-            background-color: #fff;
+            background-color: #f9f9f9;
             padding: 20px;
             border-radius: 8px;
             width: calc(50% - 10px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
             transition: transform 0.2s, box-shadow 0.2s;
         }
-        
+
         .project:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
         }
 
         .project h3 {
             font-size: 1.5em;
             color: #2c3e50;
         }
+
         .project p {
             color: #666;
-            line-height: 1.5;
+            line-height: 1.6;
         }
+
         .project a {
             color: #3498db;
             text-decoration: none;
             font-weight: bold;
         }
+
         .project a:hover {
             text-decoration: underline;
         }
 
-        /* Stile per schermi piccoli */
+        /* Layout responsivo */
         @media (max-width: 768px) {
             .project {
                 width: 100%;
@@ -80,8 +96,9 @@
 <body>
 
     <header>
-        <h1>Il Mio Portfolio</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.</p>
+        <h1>Alessandro Demela</h1>
+        <p>Data Scientist & Analytics Manager</p>
+        <p>Mobile: 333 444 5555 | Email: mail@email.com | GitHub: <a href="https://github.com/tuo-username" target="_blank">tuo-username</a></p>
     </header>
 
     <div class="container">
